Version 0.0-9.2 
------------------------------------------------------------------------------
  * add is.jamo() and fix is.hangul()  



Version 0.0-9.0 (2012-01-03)
------------------------------------------------------------------------------
  * fixing bug on HangulAutomata function 
  * added more test case


Version 0.0-8.3 (2011-12-23)
------------------------------------------------------------------------------
  * added input string encoding detection function(can only detect UTF-8,16,32)
  * added Hangul automata logic, now can convert jamo sequences to Hangul syllable.
  * added user dic reloading function(for future use) 



Version 0.0-8.1 (2011-12-19)
------------------------------------------------------------------------------
  * full support Jamo and keystrokes converting
  * add link to github wiki for examples using Hangul




Version 0.0-8.0 (2011-12-09)
------------------------------------------------------------------------------
  * improved performance more than 100 times on functions which related with Hannanum Analyzer.
  * set -Xmx512m for Java VM.
  * Java sources are added.



Version 0.0-7.4 (2011-10-12)
------------------------------------------------------------------------------

  * fix encoding problems when in Windows.
 